# xontrib-bluray

./: .pre-commit-config.yaml  README.md  pyproject.toml
xontrib_bluray/: constants.py  custom_lexer.py  custom_text_area.py  custom_tokenisation.py  dialog.py  main.py  path_picker.py
