# Unfortunately couldn't figure this out with UV, resorted to poetry

[tool.poetry]
name = "xontrib-bluray"
version = "0.0.1"
description = "Upgrade from cd to bluray"
authors = ["uninstall-your-browser <none@none.invalid>"]

license = "MIT"
readme = "README.md"

repository = "https://github.com/uninstall-your-browser/xontrib-bluray"
keywords = ['xontrib', 'xonsh']
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Programming Language :: Python :: 3",
]




[tool.poetry.plugins."xonsh.xontribs"]
"bluray" = "xontrib_bluray.main"



[tool.poetry.urls]

Homepage = "https://github.com/uninstall-your-browser/xontrib-bluray"
Documentation = "https://github.com/uninstall-your-browser/xontrib-bluray/blob/master/README.md"
Code = "https://github.com/uninstall-your-browser/xontrib-bluray"
"Issue tracker" = "https://github.com/uninstall-your-browser/xontrib-bluray/issues"


[tool.poetry.dependencies]
python = ">=3.13"
xonsh = ">=0.20"
prompt-toolkit = "^3.0.52"

[tool.poetry.scripts]
run-bluray="xontrib_bluray:run"

[tool.poetry.dev-dependencies]
pytest = ">=7.0"



[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B", # flake8-bugbear
    "I", # isort
    "UP", # pyupgrade
    "SIM", # simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff specific rules
]
